# recursive-zk-bridge

./:  BENCHMARKS.md  .gitignore  .gitmodules  ANALYSIS.md  BENCHMARKS.md  Cargo.toml  Makefile  README.md  THEORY.md  input.json  input_1024.json  input_16.json  input_2048.json  input_4096.json  input_512.json
benchmarks/: circom_single_16_p3.8xlarge.txt  circom_single_16_r5n.8xlarge.txt  circom_single_16_r6in.16xlarge.txt  halo2_output_512_p3.16xlarge.txt  halo2_output_512_r6a.16large.txt  halo2_pairing_p3.16xlarge.txt  halo2_pairing_p3.16xlarge_cuda.txt  halo2_pairing_p3.8xlarge.txt  halo2_pairing_p3.8xlarge_cuda.txt  halo2_pairing_r6in.16large.txt  halo2_recur_2_1024_r6in.16large.txt  halo2_recur_2_16_m1.txt  halo2_recur_2_16_p3.8xlarge_cuda.txt  halo2_recur_2_16_r5.4xlarge.txt  halo2_recur_2_16_r6a.16xlarge.txt  halo2_recur_2_512_r6in.16large.txt  halo2_single_16_p3.16xlarge.txt  halo2_single_16_p3.16xlarge_cuda.txt  halo2_single_16_p3.8xlarge.txt  halo2_single_16_p3.8xlarge_cuda.txt  halo2_single_16_r6in.16xlarge.txt  nova_recur_2_16_r6a.16large.txt  plonky2_pairing_r5n.8xlarge.txt  plonky2_pairing_r6in.16large.txt
common/: Cargo.toml
common/src/: inputs_generator.rs  lib.rs  mock_generator.rs
halo2/: Cargo.toml  README.md
halo2/benches/: bench.rs
halo2/src/: aggregation.rs  circuit.rs  consts.rs  hash2curve.rs  lib.rs  main.rs  sha256.rs  utils.rs
nova-r1cs/: Cargo.toml  README.md  package-lock.json  package.json
nova-r1cs/circuits/: aggregate_bls_verify.circom  sha256_bytes.circom  simple_serialize.circom
nova-r1cs/scripts/: bls_utils.ts  circom_rapidsnark_test.sh  circom_snarkjs_test.sh  generate_input_data.ts
nova-r1cs/src/: main.rs
nova-scotia/: Cargo.toml  package-lock.json  package.json  tsconfig.json
nova-scotia/circuits/: aggregate_bls_verify.circom  committee_rotation_step.circom  committee_rotation_step_s.circom  nova_bls_verify.circom  sha256_bytes.circom  simple_serialize.circom
nova-scotia/scripts/: bls_utils.ts  build_aggregate_bls_verify.sh  generate_input_data.ts
nova-scotia/src/: main.rs
nova-scotia/test/: input_aggregate_bls_verify_512.json
