[workspace]

members = [
    "common",
    "halo2",
    "nova-r1cs"
]

[patch."https://github.com/junyu0312/halo2.git"]
halo2_proofs = { git = "https://github.com/timoftime/halo2-kzg.git", branch = "gpu" }
halo2_gadgets = { git = "https://github.com/timoftime/halo2-kzg.git", branch = "gpu" }
#halo2_proofs = { path = "../halo2-kzg/halo2_proofs" }
#halo2_gadgets = { path = "../halo2-kzg/halo2_gadgets" }

[patch."https://github.com/DelphinusLab/halo2ecc-s.git"]
halo2ecc-s = { git = "https://github.com/timoftime/halo2ecc-s.git" }
#halo2ecc-s = { path = "../halo2ecc-s" }
