[package]
name = "committee-rotation-halo2"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ark-std = { version = "0.3.0", features = ["print-trace"] }
common = { path = "../common" }
halo2_gadgets = { git = "https://github.com/junyu0312/halo2.git", branch = "gpu" }
halo2_proofs = { git = "https://github.com/junyu0312/halo2.git", branch = "gpu" }
halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s", branch = "bisect-lookup" }
halo2ecc-s = { git = "https://github.com/timoftime/halo2ecc-s.git", rev = "855f897ae57e985cf080e151bfd82223c7f2902e" } # { path = "../../examples/halo2ecc-s" }
hex = "0.4.3"
itertools = "0.10.5"
rand = "0.8.5"
sha2 = "0.10.6"
serde_json = "1.0.93"
subtle = "2.3"
milagro_bls = {git = "https://github.com/Snowfork/milagro_bls"} #{ path = "../../examples/milagro_bls" }
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
crypto-bigint = "0.5.0"
num-modular = "0.4.2"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.4.0"

[features]
default = []
cuda = ["halo2_proofs/cuda", "halo2ecc-s/cuda"]
#unstable = ["halo2_gadgets/unstable"]

[[bench]]
name = "bench"
harness = false


