[package]
name = "committe-rotation-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
common = { path = "../common" }
nova-snark = "0.12.0"
nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia.git" }
serde_json = "1.0.85"
